--- a/duel/duel.ipynb
+++ b/duel/duel.ipynb
@@ -52,16 +52,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Assign 0 to each variable that stores the victories\n"
+    "# Assign 0 to each variable that stores the victories\n",
+    "gandalf_victory = 0\n",
+    "saruman_victory = 0\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "4\n"
+     ]
+    }
+   ],
    "source": [
-    "# Execution of spell clashes\n"
+    "# Execution of spell clashes\n",
+    "\n",
+    "gandalf = [10, 11, 13, 30, 22, 11, 10, 33, 22, 22]\n",
+    "saruman = [23, 66, 12, 43, 12, 10, 44, 23, 12, 17]\n",
+    "\n",
+    "gandalf_victory = 0\n",
+    "saruman_victory = 0\n",
+    "\n",
+    "\n",
+    "for result in range(len(gandalf)):\n",
+    "    if gandalf[result] > saruman[result]:\n",
+    "        gandalf_victory += 1\n",
+    "    else:\n",
+    "        saruman_victory += 1\n",
+    "        \n",
+    "print(gandalf_victory)\n",
+    "print(saruman_victory)"
    ]
   },
   {
@@ -77,12 +104,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gandalf wins\n"
+     ]
+    }
+   ],
    "source": [
     "# We check who has won, do not forget the possibility of a draw.\n",
-    "# Print the result based on the winner.\n"
+    "# Print the result based on the winner.\n",
+    "     \n",
+    "if gandalf_victory > saruman_victory:\n",
+    "    print(\"Gandalf wins\")\n",
+    "elif saruman_victory > gandalf_victory:\n",
+    "    print(\"Saruman wins\")\n",
+    "else:\n",
+    "    print(\"Tie\")\n",
+    "    "
    ]
   },
   {
@@ -163,11 +206,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "([50, 40, 40, 10, 50, 10, 40, 50, 10, 50], [45, 45, 25, 50, 25, 40, 10, 45, 10, 10])\n"
+     ]
+    }
+   ],
    "source": [
-    "# Assign spell power lists to variables\n"
+    "# Assign spell power lists to variables\n",
+    "\n",
+    "POWER = {\n",
+    "    'Fireball': 50, \n",
+    "    'Lightning bolt': 40, \n",
+    "    'Magic arrow': 10, \n",
+    "    'Black Tentacles': 25, \n",
+    "    'Contagion': 45\n",
+    "}\n",
+    "\n",
+    "gandalf = ['Fireball', 'Lightning bolt', 'Lightning bolt', 'Magic arrow', 'Fireball', \n",
+    "           'Magic arrow', 'Lightning bolt', 'Fireball', 'Magic arrow', 'Fireball']\n",
+    "saruman = ['Contagion', 'Contagion', 'Black Tentacles', 'Fireball', 'Black Tentacles', \n",
+    "           'Lightning bolt', 'Magic arrow', 'Contagion', 'Magic arrow', 'Magic arrow']\n",
+    "\n",
+    "gandalf_power = []\n",
+    "saruman_power = []\n",
+    "\n",
+    "for power in range(len(gandalf)):\n",
+    "    gandalf_power.append(POWER[gandalf[power]])\n",
+    "    \n",
+    "for value in range(len(saruman)):\n",
+    "    saruman_power.append(POWER[saruman[value]])\n",
+    "    \n",
+    "power_result = (gandalf_power, saruman_power)\n",
+    "\n",
+    "print(power_result)\n",
+    "    \n"
    ]
   },
   {
@@ -183,13 +261,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 131,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Gandalf', 'Saruman', 'Gandalf', 'Saruman', 'Gandalf', 'Saruman', 'Gandalf', 'Gandalf', '0', 'Gandalf']\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. A sorcerer wins if he succeeds in winning 3 spell clashes in a row.\n",
-    "\n",
-    "\n",
     "\n",
     "# Execution of spell clashes\n",
     "\n",
@@ -199,7 +283,27 @@
     "\n",
     "# check the winner\n",
     "\n",
-    "# count sum of clashes\n"
+    "# count sum of clashes\n",
+    "\n",
+    "battle = []\n",
+    "\n",
+    "for win in range(len(power_result[0])):\n",
+    "    if (power_result[0][win] > power_result[1][win]):\n",
+    "        battle.append(\"Gandalf\")\n",
+    "    elif (power_result[0][win] < power_result[1][win]):\n",
+    "        battle.append(\"Saruman\")\n",
+    "    else:\n",
+    "        battle.append(\"0\")\n",
+    "    \n",
+    "print(battle)\n",
+    "\n",
+    "for real_win in range(len(battle)):\n",
+    "    if battle[real_win] == 3:\n",
+    "        print(\"Gandalf wins\")\n",
+    "    else:\n",
+    "        print(\"Saruman wins\")\n",
+    "    \n",
+    "# no entiendo, por que se supone que gana Gandalf si no gana 3 veces in a row?"
    ]
   },
   {
@@ -214,11 +318,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "([50, 40, 40, 10, 50, 10, 40, 50, 10, 50], [45, 45, 25, 50, 25, 40, 10, 45, 10, 10])\n",
+      "35\n",
+      "30.5\n"
+     ]
+    }
+   ],
    "source": [
-    "# 3. Average of each of the spell lists.\n"
+    "# 3. Average of each of the spell lists.\n",
+    "POWER = {\n",
+    "    'Fireball': 50, \n",
+    "    'Lightning bolt': 40, \n",
+    "    'Magic arrow': 10, \n",
+    "    'Black Tentacles': 25, \n",
+    "    'Contagion': 45\n",
+    "}\n",
+    "\n",
+    "gandalf = ['Fireball', 'Lightning bolt', 'Lightning bolt', 'Magic arrow', 'Fireball', \n",
+    "           'Magic arrow', 'Lightning bolt', 'Fireball', 'Magic arrow', 'Fireball']\n",
+    "saruman = ['Contagion', 'Contagion', 'Black Tentacles', 'Fireball', 'Black Tentacles', \n",
+    "           'Lightning bolt', 'Magic arrow', 'Contagion', 'Magic arrow', 'Magic arrow']\n",
+    "\n",
+    "gandalf_power = []\n",
+    "saruman_power = []\n",
+    "\n",
+    "for power in range(len(gandalf)):\n",
+    "    gandalf_power.append(POWER[gandalf[power]])\n",
+    "    \n",
+    "for value in range(len(saruman)):\n",
+    "    saruman_power.append(POWER[saruman[value]])\n",
+    "    \n",
+    "power_result = (gandalf_power, saruman_power)\n",
+    "\n",
+    "print(power_result)\n",
+    "\n",
+    "import statistics\n",
+    "\n",
+    "print(statistics.mean(gandalf_power))\n",
+    "print(statistics.mean(saruman_power))"
    ]
   },
   {
@@ -234,11 +378,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16.881943016134134\n",
+      "15.56438241627338\n"
+     ]
+    }
+   ],
    "source": [
-    "# 4. Standard deviation of each of the spell lists.\n"
+    "# 4. Standard deviation of each of the spell lists.\n",
+    "print(statistics.pstdev(gandalf_power))\n",
+    "print(statistics.pstdev(saruman_power))"
    ]
   },
   {
@@ -276,7 +431,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
