--- a/mission-impossible/mission-impossible.ipynb
+++ b/mission-impossible/mission-impossible.ipynb
@@ -38,11 +38,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[23, 20, 15, 40, 15]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Show volumes that exceed 10 dBs\n"
+    "# Show volumes that exceed 10 dBs\n",
+    "dbs = [0, 1, 0, 0, 0, 0, 1, 0, 1, 23, 1, 0, 1, 1, 0, 0, 0, \n",
+    "       1, 1, 0, 20, 1, 1, 15, 1, 0, 0, 0, 40, 15, 0, 0]\n",
+    "\n",
+    "exceed_10 = []\n",
+    "\n",
+    "for volume in range(len(dbs)):\n",
+    "    if dbs[volume] > 10:\n",
+    "        exceed_10.append(dbs[volume])\n",
+    "\n",
+    "print(exceed_10)"
    ]
   },
   {
@@ -57,11 +75,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9, 20, 23, 28, 29]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Show the moments (indexs of the list) in which a volume exceeds 10 dBs\n"
+    "# Show the moments (indexs of the list) in which a volume exceeds 10 dBs\n",
+    "\n",
+    "index = []\n",
+    "\n",
+    "for volume in range(len(dbs)):\n",
+    "    if dbs[volume] > 10:\n",
+    "        index.append(volume)\n",
+    "\n",
+    "print(index)\n"
    ]
   },
   {
@@ -76,12 +110,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(9, 23), (20, 20), (23, 15), (28, 40), (29, 15)]\n"
+     ]
+    }
+   ],
    "source": [
     "# Combine the last two exercises to show the moments when a \n",
-    "# volume exceeds 10 dBs. HINT: Use the enumerate function\n"
+    "# volume exceeds 10 dBs. HINT: Use the enumerate function\n",
+    "\n",
+    "dbs = [0, 1, 0, 0, 0, 0, 1, 0, 1, 23, 1, 0, 1, 1, 0, 0, 0, \n",
+    "       1, 1, 0, 20, 1, 1, 15, 1, 0, 0, 0, 40, 15, 0, 0]\n",
+    "\n",
+    "enumerate_dbs = enumerate(dbs)\n",
+    "\n",
+    "list_enumerate = list(enumerate_dbs)\n",
+    "\n",
+    "\n",
+    "lista = []\n",
+    "\n",
+    "for i in range(len(list_enumerate)):\n",
+    "    if list_enumerate[i][1] > 10:\n",
+    "        lista.append(list_enumerate[i])\n",
+    "\n",
+    "print(lista)"
    ]
   },
   {
@@ -96,13 +154,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alarm!\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "# Ethan is discovered if two consecutive volumes are greater than 10 dB. Is he safe? \n",
     "# HINT: Beware of the extremes, do not have an error of the type\n",
-    "# IndexError: list index out of range\n"
+    "# IndexError: list index out of range\n",
+    "\n",
+    "dbs = [0, 1, 0, 0, 0, 0, 1, 0, 1, 23, 1, 0, 1, 1, 0, 0, 0, \n",
+    "       1, 1, 0, 20, 1, 1, 15, 1, 0, 0, 0, 40, 15, 0, 0]\n",
+    "\n",
+    "alarm = 0\n",
+    "\n",
+    "for danger in range(len(dbs)):  \n",
+    "    if alarm == 2:\n",
+    "        print(\"Alarm!\")\n",
+    "    if dbs[danger] > 10:\n",
+    "        alarm += 1\n",
+    "    else:\n",
+    "        alarm = 0\n",
+    "        \n",
+    "print(alarm)\n",
+    "\n"
    ]
   },
   {
@@ -140,11 +223,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pre hacking: [0, 1, 0, 0, 0, 0, 1, 0, 1, 23, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 20, 1, 1, 15, 1, 0, 0, 0, 40, 15, 0, 0]\n",
+      "Post hacking: [0, 1, 0, 0, 0, 0, 1, 0, 1, 11, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 20, 1, 1, 15, 1, 0, 0, 0, 22, 15, 0, 0]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "dbs = [0, 1, 0, 0, 0, 0, 1, 0, 1, 23, 1, 0, 1, 1, 0, 0, 0, \n",
+    "       1, 1, 0, 20, 1, 1, 15, 1, 0, 0, 0, 40, 15, 0, 0]\n",
+    "\n",
+    "cheat = []\n",
+    "\n",
+    "for less in range(len(dbs)):\n",
+    "    if dbs[less] > 30:\n",
+    "      cheat.append(dbs[less]- 18)\n",
+    "    elif dbs[less] > 20:\n",
+    "      cheat.append(dbs[less]- 12)\n",
+    "    else:\n",
+    "      cheat.append(dbs[less])\n",
+    "\n",
+    "print(\"Pre hacking:\", dbs)\n",
+    "print(\"Post hacking:\", cheat)"
    ]
   },
   {
@@ -159,6 +266,13 @@
     "[0, 1, 0, 0, 0, 0, 1, 0, 1, 11, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 20, 1, 1, 15, 1, 0, 0, 0, 22, 15, 0, 0]\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -177,7 +291,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
