--- a/bus/bus.ipynb
+++ b/bus/bus.ipynb
@@ -43,11 +43,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
    "source": [
-    "# 1. Calculate the number of stops.\n"
+    "# 1. Calculate the number of stops.\n",
+    "\n",
+    "stops = [(10, 0), (4, 1), (3, 5), (3, 4), (5, 1), (1, 5), (5, 8), (4, 6), (2, 3)]\n",
+    "\n",
+    "number_stops = len(stops)\n",
+    "\n",
+    "print(number_stops)\n"
    ]
   },
   {
@@ -62,12 +76,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 13, 11, 10, 14, 10, 7, 5, 4]\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. Assign a variable a list whose elements are the number of passengers in each stop: \n",
-    "# Each item depends on the previous item in the list + in - out.\n"
+    "# Each item depends on the previous item in the list + in - out.\n",
+    "\n",
+    "passengers_on = 0\n",
+    "passenger_stop = []\n",
+    "\n",
+    "for people in range(len(stops)):\n",
+    "    passengers_on = passengers_on +(stops[people][0]-stops[people][1])\n",
+    "    passenger_stop.append(passengers_on)\n",
+    "        \n",
+    "print(passenger_stop)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -82,11 +117,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14\n"
+     ]
+    }
+   ],
    "source": [
-    "# 3. Find the maximum occupation of the bus.\n"
+    "# 3. Find the maximum occupation of the bus.\n",
+    "\n",
+    "print(max(passenger_stop))\n"
    ]
   },
   {
@@ -101,12 +146,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.333333333333334\n",
+      "3.197221015541813\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. Calculate the average occupation. And the standard deviation.\n",
-    "\n"
+    "\n",
+    "import statistics as stat\n",
+    "\n",
+    "print(stat.mean(passenger_stop))\n",
+    "print(stat.pstdev(passenger_stop))"
    ]
   },
   {
@@ -137,7 +195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
