--- a/lyrics/lytics.ipynb
+++ b/lyrics/lytics.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,8 @@
     "Let's go hunt, doo doo doo doo doo doo\n",
     "Let's go hunt, doo doo doo doo doo doo\n",
     "Let's go hunt!\n",
-    "Run away,…'''"
+    "Run away,…'''\n",
+    "\n"
    ]
   },
   {
@@ -104,12 +105,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Baby shark, doo doo doo doo doo doo\n",
+      "Baby shark, doo doo doo doo doo doo\n",
+      "Baby shark, doo doo doo doo doo doo\n",
+      "Baby shark!\n"
+     ]
+    }
+   ],
    "source": [
     "# your code here\n",
-    "\n"
+    "for i in range(3):\n",
+    "    print(\"Baby shark,\", \"doo \"*5 + \"doo\")\n",
+    "\n",
+    "print(\"Baby shark!\")"
    ]
   },
   {
@@ -128,23 +143,59 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 48,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Baby shark, doo doo doo doo doo doo\n",
+      "Baby shark, doo doo doo doo doo doo\n",
+      "Baby shark, doo doo doo doo doo doo\n",
+      "Baby shark!\n",
+      "Mommy shark, doo doo doo doo doo doo\n",
+      "Mommy shark, doo doo doo doo doo doo\n",
+      "Mommy shark, doo doo doo doo doo doo\n",
+      "Mommy shark!\n",
+      "Daddy shark, doo doo doo doo doo doo\n",
+      "Daddy shark, doo doo doo doo doo doo\n",
+      "Daddy shark, doo doo doo doo doo doo\n",
+      "Daddy shark!\n",
+      "Grandma shark, doo doo doo doo doo doo\n",
+      "Grandma shark, doo doo doo doo doo doo\n",
+      "Grandma shark, doo doo doo doo doo doo\n",
+      "Grandma shark!\n",
+      "Grandpa shark, doo doo doo doo doo doo\n",
+      "Grandpa shark, doo doo doo doo doo doo\n",
+      "Grandpa shark, doo doo doo doo doo doo\n",
+      "Grandpa shark!\n",
+      "Let's go hunt, doo doo doo doo doo doo\n",
+      "Let's go hunt, doo doo doo doo doo doo\n",
+      "Let's go hunt, doo doo doo doo doo doo\n",
+      "Let's go hunt!\n",
+      "Run away,…\n"
+     ]
+    }
+   ],
    "source": [
     "### Step 2: Full song\n",
     "\n",
-    "Create a code that prints the complete lyrics. "
+    "\n",
+    "person = [\"Baby shark\",\"Mommy shark\",\"Daddy shark\",\"Grandma shark\",\"Grandpa shark\",\"Let's go hunt\"]\n",
+    "doo = \" doo\"*6 + \"\\n\"\n",
+    "full = \"\"\n",
+    "for s in person:\n",
+    "    full = full +(s + ',' + doo)*3 + s +'!\\n'\n",
+    "full = full + \"Run away,…\"\n",
+    "print(full)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# your code here\n",
-    "\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -186,19 +237,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "# your code here\n",
+    "\n",
+    "result = full\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# Check\n",
     "\n",
@@ -221,21 +283,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
     "def baby_shark_lyrics():     \n",
     "    # your code here\n",
-    "    \n",
-    "    "
+    "    person = [\"Baby shark\",\"Mommy shark\",\"Daddy shark\",\"Grandma shark\",\"Grandpa shark\",\"Let's go hunt\"]\n",
+    "    doo = \" doo\"*6 + \"\\n\"\n",
+    "    full = \"\"\n",
+    "    for s in person:\n",
+    "        full = full +(s + ',' + doo)*3 + s +'!\\n'\n",
+    "    full = full + \"Run away,…\"\n",
+    "    print(full)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Baby shark, doo doo doo doo doo doo\n",
+      "Baby shark, doo doo doo doo doo doo\n",
+      "Baby shark, doo doo doo doo doo doo\n",
+      "Baby shark!\n",
+      "Mommy shark, doo doo doo doo doo doo\n",
+      "Mommy shark, doo doo doo doo doo doo\n",
+      "Mommy shark, doo doo doo doo doo doo\n",
+      "Mommy shark!\n",
+      "Daddy shark, doo doo doo doo doo doo\n",
+      "Daddy shark, doo doo doo doo doo doo\n",
+      "Daddy shark, doo doo doo doo doo doo\n",
+      "Daddy shark!\n",
+      "Grandma shark, doo doo doo doo doo doo\n",
+      "Grandma shark, doo doo doo doo doo doo\n",
+      "Grandma shark, doo doo doo doo doo doo\n",
+      "Grandma shark!\n",
+      "Grandpa shark, doo doo doo doo doo doo\n",
+      "Grandpa shark, doo doo doo doo doo doo\n",
+      "Grandpa shark, doo doo doo doo doo doo\n",
+      "Grandpa shark!\n",
+      "Let's go hunt, doo doo doo doo doo doo\n",
+      "Let's go hunt, doo doo doo doo doo doo\n",
+      "Let's go hunt, doo doo doo doo doo doo\n",
+      "Let's go hunt!\n",
+      "Run away,…\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "# Check\n",
     "\n",
@@ -265,19 +366,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "invalid mode: 'Baby shark, doo doo doo doo doo doo\nBaby shark, doo doo doo doo doo doo\nBaby shark, doo doo doo doo doo doo\nBaby shark!\nMommy shark, doo doo doo doo doo doo\nMommy shark, doo doo doo doo doo doo\nMommy shark, doo doo doo doo doo doo\nMommy shark!\nDaddy shark, doo doo doo doo doo doo\nDaddy shark, doo doo doo doo doo doo\nDaddy shark, doo doo doo doo doo doo\nDaddy shark!\nGrandma shark, doo doo doo doo doo doo\nGrandma shark, doo doo doo doo doo doo\nGrandma shark, doo doo doo doo doo doo\nGrandma shark!\nGrandpa shark, doo doo doo doo doo doo\nGrandpa shark, doo doo doo doo doo doo\nGrandpa shark, doo doo doo doo doo doo\nGrandpa shark!\nLet's go hunt, doo doo doo doo doo doo\nLet's go hunt, doo doo doo doo doo doo\nLet's go hunt, doo doo doo doo doo doo\nLet's go hunt!\nRun away,…'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-69-dec1c32b660f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# your code here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mtext\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/home/seora/prework-datamad-no-solutions/lyrics/songs/baby-shark.txt'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: invalid mode: 'Baby shark, doo doo doo doo doo doo\nBaby shark, doo doo doo doo doo doo\nBaby shark, doo doo doo doo doo doo\nBaby shark!\nMommy shark, doo doo doo doo doo doo\nMommy shark, doo doo doo doo doo doo\nMommy shark, doo doo doo doo doo doo\nMommy shark!\nDaddy shark, doo doo doo doo doo doo\nDaddy shark, doo doo doo doo doo doo\nDaddy shark, doo doo doo doo doo doo\nDaddy shark!\nGrandma shark, doo doo doo doo doo doo\nGrandma shark, doo doo doo doo doo doo\nGrandma shark, doo doo doo doo doo doo\nGrandma shark!\nGrandpa shark, doo doo doo doo doo doo\nGrandpa shark, doo doo doo doo doo doo\nGrandpa shark, doo doo doo doo doo doo\nGrandpa shark!\nLet's go hunt, doo doo doo doo doo doo\nLet's go hunt, doo doo doo doo doo doo\nLet's go hunt, doo doo doo doo doo doo\nLet's go hunt!\nRun away,…'"
+     ]
+    }
+   ],
    "source": [
     "# your code here\n",
-    "\n"
+    "\n",
+    "text = open('/home/seora/prework-datamad-no-solutions/lyrics/songs/baby-shark.txt', r)\n",
+    "print(text)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'text' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-70-7db9c48d3821>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# check\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mbabyshark\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'text' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# check\n",
     "\n",
@@ -327,9 +454,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your baby_shark_lyrics functions has 313 characters\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "import inspect\n",
     "\n",
