--- a/robin-hood/robin-hood.ipynb
+++ b/robin-hood/robin-hood.ipynb
@@ -58,11 +58,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter({(5, 7): 3, (4, 5): 2, (2, 2): 2, (-3, 2): 2, (0, 2): 1, (4, 7): 1, (1, -3): 1, (3, -2): 1, (3, 2): 1, (-5, 7): 1, (-4, 5): 1, (0, -2): 1, (-4, 7): 1, (-1, 3): 1, (-4, -5): 1, (9, 9): 1, (-8, -9): 1})\n"
+     ]
+    }
+   ],
    "source": [
-    "# 1. Robin Hood is famous for hitting an arrow with another arrow. Did you get it?\n"
+    "# 1. Robin Hood is famous for hitting an arrow with another arrow. Did you get it?\n",
+    "from collections import Counter\n",
+    "\n",
+    "repetition = Counter(points)\n",
+    "\n",
+    "print(repetition)\n",
+    "        \n"
    ]
   },
   {
@@ -77,11 +91,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10, 6, 2, 2)\n"
+     ]
+    }
+   ],
    "source": [
-    "# 2. Calculate how many arrows have fallen in each quadrant.\n"
+    "# 2. Calculate how many arrows have fallen in each quadrant.\n",
+    "\n",
+    "points = [(4, 5), (-0, 2), (4, 7), (1, -3), (3, -2), (4, 5),\n",
+    "          (3, 2), (5, 7), (-5, 7), (2, 2), (-4, 5), (0, -2),\n",
+    "          (-4, 7), (-1, 3), (-3, 2), (-4, -5), (-3, 2),\n",
+    "          (5, 7), (5, 7), (2, 2), (9, 9), (-8, -9)]\n",
+    "Q1 = 0\n",
+    "Q2 = 0\n",
+    "Q3 = 0\n",
+    "Q4 = 0\n",
+    "\n",
+    "for coord in range(len(points)):\n",
+    "    if points[coord][0] > 0 and points[coord][1] > 0:\n",
+    "        Q1 += 1\n",
+    "    elif points[coord][0] < 0 and points[coord][1] > 0:\n",
+    "        Q2 += 1\n",
+    "    elif points[coord][0] < 0 and points[coord][1] < 0:\n",
+    "        Q3 += 1\n",
+    "    elif points[coord][0] > 0 and points[coord][1] < 0:\n",
+    "        Q4 += 1\n",
+    "        \n",
+    "quadrants = (Q1, Q2, Q3, Q4)\n",
+    "\n",
+    "print(quadrants)\n"
    ]
   },
   {
@@ -96,12 +141,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 2)\n",
+      "2.0\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. Find the point closest to the center. Calculate its distance to the center\n",
-    "# Defining a function that calculates the distance to the center can help.\n"
+    "# Defining a function that calculates the distance to the center can help.\n",
+    "\n",
+    "closest = []\n",
+    "\n",
+    "import math\n",
+    "\n",
+    "for close in range(len(points)):\n",
+    "    distance = (math.sqrt(points[close][0]**2 + points[close][1]**2))\n",
+    "    closest.append(distance)\n",
+    "    \n",
+    "print(points[closest.index(min(closest))])\n",
+    "print(min(closest))"
    ]
   },
   {
@@ -117,12 +182,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(9, 9), (-8, -9)]\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. If the target has a radius of 9, calculate the number of arrows that \n",
-    "# must be picked up in the forest.\n"
+    "# must be picked up in the forest.\n",
+    "\n",
+    "arrows_picked = []\n",
+    "\n",
+    "for arrows in range(len(points)):\n",
+    "    if abs(points[arrows][0]) >= 9 or abs(points[arrows][1]) >= 9:\n",
+    "        arrows_picked.append(points[arrows])\n",
+    "\n",
+    "print(arrows_picked)\n",
+    "print(len(arrows_picked))\n",
+    "        \n"
    ]
   },
   {
@@ -135,6 +219,20 @@
     "2\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -160,7 +258,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
