--- a/snail-and-well/snail-and-well.ipynb
+++ b/snail-and-well/snail-and-well.ipynb
@@ -20,9 +20,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Days = 11\n"
+     ]
+    }
+   ],
    "source": [
     "# Assign problem data to variables with representative names\n",
     "# well height, daily advance, night retreat, accumulated distance\n",
@@ -34,7 +42,21 @@
     "# Write the code that solves the problem\n",
     "\n",
     "\n",
-    "# Print the result with print('Days =', days)\n"
+    "# Print the result with print('Days =', days)\n",
+    "\n",
+    "well_height = 125\n",
+    "daily_advance = 30\n",
+    "night_retreat = -20\n",
+    "accumulated_distance = 0\n",
+    "days = 0\n",
+    "\n",
+    "while accumulated_distance < well_height:\n",
+    "    accumulated_distance += daily_advance\n",
+    "    if accumulated_distance < well_height:\n",
+    "        accumulated_distance += night_retreat\n",
+    "    days += 1\n",
+    "    \n",
+    "print('Days =', days)\n"
    ]
   },
   {
@@ -79,9 +101,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Days = 6\n"
+     ]
+    }
+   ],
    "source": [
     "# Assign problem data to variables with representative names\n",
     "# well height, daily advance, night retreat, accumulated distance\n",
@@ -94,7 +124,20 @@
     "\n",
     "\n",
     "\n",
-    "# Print the result with print('Days =', days)\n"
+    "# Print the result with print('Days =', days)\n",
+    "\n",
+    "well_height = 125\n",
+    "advance_cm = [30, 21, 33, 77, 44, 45, 23, 45, 12, 34, 55]\n",
+    "night_retreat = 20\n",
+    "accumulated_distance = 0\n",
+    "days = 0\n",
+    "\n",
+    "while accumulated_distance < well_height:\n",
+    "    accumulated_distance += advance_cm[days] - night_retreat\n",
+    "    days += 1\n",
+    "    \n",
+    "print('Days =', days)\n",
+    "\n"
    ]
   },
   {
@@ -109,11 +152,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "77\n",
+      "12\n"
+     ]
+    }
+   ],
    "source": [
-    "# What is its maximum displacement in a day? And its minimum?\n"
+    "# What is its maximum displacement in a day? And its minimum?\n",
+    "well_height = 125\n",
+    "advance_cm = [30, 21, 33, 77, 44, 45, 23, 45, 12, 34, 55]\n",
+    "night_retreat = 20\n",
+    "accumulated_distance = 0\n",
+    "days = 0\n",
+    "\n",
+    "# maximum_displacement\n",
+    "print(max(advance_cm))\n",
+    "\n",
+    "# minimum_displacement\n",
+    "print(min(advance_cm))\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -128,11 +193,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "38.09090909090909\n"
+     ]
+    }
+   ],
    "source": [
-    "# What is its average progress?\n"
+    "# What is its average progress?\n",
+    "\n",
+    "well_height = 125\n",
+    "advance_cm = [30, 21, 33, 77, 44, 45, 23, 45, 12, 34, 55]\n",
+    "night_retreat = 20\n",
+    "accumulated_distance = 0\n",
+    "days = 0\n",
+    " \n",
+    "average_progress = sum(advance_cm) / len(advance_cm)\n",
+    "print(average_progress)"
    ]
   },
   {
@@ -147,11 +229,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17.159437082600803\n"
+     ]
+    }
+   ],
    "source": [
-    "# What is the standard deviation of your displacement during the day?\n"
+    "# What is the standard deviation of your displacement during the day?\n",
+    "well_height = 125\n",
+    "advance_cm = [30, 21, 33, 77, 44, 45, 23, 45, 12, 34, 55]\n",
+    "night_retreat = 20\n",
+    "accumulated_distance = 0\n",
+    "days = 0\n",
+    "\n",
+    "import statistics\n",
+    "\n",
+    "print(statistics.pstdev(advance_cm))\n"
    ]
   },
   {
@@ -163,6 +262,13 @@
     "17.159437082600803\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -181,7 +287,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
