--- a/temperature/temperature.ipynb
+++ b/temperature/temperature.ipynb
@@ -101,14 +101,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "minimum =  0\n"
+     ]
+    }
+   ],
    "source": [
     "# assign a variable to the list of temperatures\n",
     "temperatures_C = [33,66,65,0,59,60,62,64,70,76,80,81,80,83,90,79,61,53,50,49,53,48,45,39]\n",
     "\n",
-    "# 1. Calculate the minimum of the list and print the value using print()\n"
+    "# 1. Calculate the minimum of the list and print the value using print()\n",
+    "\n",
+    "print(\"minimum = \", min(temperatures_C))\n"
    ]
   },
   {
@@ -123,11 +133,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "maximum =  90\n"
+     ]
+    }
+   ],
    "source": [
-    "# 2. Calculate the maximum of the list and print the value using print()\n"
+    "# 2. Calculate the maximum of the list and print the value using print()\n",
+    "\n",
+    "print(\"maximum = \", max(temperatures_C))\n"
    ]
   },
   {
@@ -142,11 +162,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "temperatures higher or equal than 70ºC [70, 76, 80, 81, 80, 83, 90, 79]\n"
+     ]
+    }
+   ],
    "source": [
-    "# 3. Items in the list that are greater than 70ºC and print the result\n"
+    "# 3. Items in the list that are greater than 70ºC and print the result\n",
+    "\n",
+    "over_70 = []\n",
+    "\n",
+    "for greater in range(len(temperatures_C)):\n",
+    "    if temperatures_C[greater] >= 70:\n",
+    "        over_70.append(temperatures_C[greater])\n",
+    "        \n",
+    "print(\"temperatures higher or equal than 70ºC\", over_70)\n"
    ]
   },
   {
@@ -161,11 +197,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mean =  60.25\n"
+     ]
+    }
+   ],
    "source": [
-    "# 4. Calculate the mean temperature throughout the day and print the result\n"
+    "# 4. Calculate the mean temperature throughout the day and print the result\n",
+    "\n",
+    "temperatures_C = [33,66,65,0,59,60,62,64,70,76,80,81,80,83,90,79,61,53,50,49,53,48,45,39]\n",
+    "\n",
+    "\n",
+    "mean = sum(temperatures_C) / len(temperatures_C)\n",
+    "\n",
+    "print(\"mean = \", mean)"
    ]
   },
   {
@@ -180,11 +231,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Estimation of the temperature at 3:00 =  62.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# 5.1 Solve the fault in the sensor by estimating a value\n"
+    "# 5.1 Solve the fault in the sensor by estimating a value\n",
+    "\n",
+    "fail_3 = temperatures_C[4] - ((temperatures_C[4])-temperatures_C[2])/((2))\n",
+    "\n",
+    "print(\"Estimation of the temperature at 3:00 = \", fail_3)\n"
    ]
   },
   {
@@ -199,11 +262,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Corrected temperatures after estimation:  [33, 66, 65, 62.0, 59, 60, 62, 64, 70, 76, 80, 81, 80, 83, 90, 79, 61, 53, 50, 49, 53, 48, 45, 39]\n"
+     ]
+    }
+   ],
    "source": [
-    "# 5.2 Update of the estimated value at 03:00 on the list\n"
+    "# 5.2 Update of the estimated value at 03:00 on the list\n",
+    "\n",
+    "temperatures_C[3] = fail_3\n",
+    "\n",
+    "print(\"Corrected temperatures after estimation: \", temperatures_C)\n",
+    "\n"
    ]
   },
   {
@@ -218,11 +294,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Temperatures in Fahrenheit Grades =  [91.4, 150.8, 149.0, 143.60000000000002, 138.2, 140.0, 143.60000000000002, 147.2, 158.0, 168.8, 176.0, 177.8, 176.0, 181.4, 194.0, 174.20000000000002, 141.8, 127.4, 122.0, 120.2, 127.4, 118.4, 113.0, 102.2]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Bonus: convert the list of ºC to ºFarenheit\n"
+    "# Bonus: convert the list of ºC to ºFarenheit\n",
+    "\n",
+    "    \n",
+    "farenheit_t = []\n",
+    "    \n",
+    "for temp in range(len(temperatures_C)):\n",
+    "    farenheit_t.append(temperatures_C[temp] * 1.8 + 32)\n",
+    "    \n",
+    "print(\"Temperatures in Fahrenheit Grades = \", farenheit_t)"
    ]
   },
   {
@@ -249,12 +341,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# Print True or False depending on whether you would change the cooling system or not\n",
-    "\n"
+    "\n",
+    "hours = 0\n",
+    "\n",
+    "for hour in range(len(temperatures_C)):\n",
+    "    if temperatures_C[hour] >= 70 or temperatures_C[hour] > 80 or  mean >65:\n",
+    "        hours += 1\n",
+    "        print(\"True\")\n",
+    "    \n",
+    "    "
    ]
   },
   {
@@ -280,12 +395,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[8, 9, 10, 11, 12, 13, 14, 15]\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. We want the hours (not the temperatures) whose temperature exceeds 70ºC\n",
-    "\n"
+    "\n",
+    "over_70 = []\n",
+    "\n",
+    "for over in range(len(temperatures_C)):\n",
+    "    if temperatures_C[over] >= 70:\n",
+    "        over_70.append(over)\n",
+    "        \n",
+    "print(over_70)"
    ]
   },
   {
@@ -319,11 +449,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "62.833333333333336\n",
+      "145.1\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. Average of each of the lists (ºC and ºF). How they relate?\n",
+    "\n",
+    "import statistics as stat\n",
+    "\n",
+    "mean_C = stat.mean(temperatures_C)\n",
+    "mean_F = stat.mean(farenheit_t)\n",
+    "print(mean_C)\n",
+    "print(mean_F)\n",
     "\n"
    ]
   },
@@ -341,12 +487,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14.633485192833897\n",
+      "26.340273347101014\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. Standard deviation of each of the lists. How they relate?\n",
-    "\n"
+    "\n",
+    "stdev_C = stat.pstdev(temperatures_C)\n",
+    "stdev_F = stat.pstdev(farenheit_t)\n",
+    "\n",
+    "print(stdev_C)\n",
+    "print(stdev_F)"
    ]
   },
   {
@@ -385,7 +545,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
