--- a/bus/bus.ipynb
+++ b/bus/bus.ipynb
@@ -38,16 +38,26 @@
    "source": [
     "# variables\n",
     "\n",
-    "stops = [(10, 0), (4, 1), (3, 5), (3, 4), (5, 1), (1, 5), (5, 8), (4, 6), (2, 3)]"
+    "stops = [(10, 0), (4, 1), (3, 5), (3, 4), (5, 1), (1, 5), (5, 8), (4, 6), (2, 3)]\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
    "source": [
-    "# 1. Calculate the number of stops.\n"
+    "# 1. Calculate the number of stops.\n",
+    "total_stops=len(stops)\n",
+    "print(total_stops)"
    ]
   },
   {
@@ -64,10 +74,27 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 13, 11, 10, 14, 10, 7, 5, 4]\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. Assign a variable a list whose elements are the number of passengers in each stop: \n",
-    "# Each item depends on the previous item in the list + in - out.\n"
+    "# Each item depends on the previous item in the list + in - out.\n",
+    "movements=[]\n",
+    "passengers_number=[]\n",
+    "\n",
+    "for In,Out in stops:\n",
+    "    movements.append(In-Out)\n",
+    "        \n",
+    "for i in range(total_stops):\n",
+    "    passengers_number.append(sum(movements[0:i+1]))\n",
+    "print(passengers_number)"
    ]
   },
   {
@@ -84,9 +111,20 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14\n"
+     ]
+    }
+   ],
    "source": [
-    "# 3. Find the maximum occupation of the bus.\n"
+    "# 3. Find the maximum occupation of the bus.\n",
+    "\n",
+    "max_ocupation=max(passengers_number)\n",
+    "print(max_ocupation)"
    ]
   },
   {
@@ -103,10 +141,26 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.333333333333334\n",
+      "3.391164991562634\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. Calculate the average occupation. And the standard deviation.\n",
-    "\n"
+    "\n",
+    "average_ocupation=sum(passengers_number)/len(stops)\n",
+    "\n",
+    "import statistics\n",
+    "stdev=statistics.stdev(passengers_number)\n",
+    "\n",
+    "print(average_ocupation)\n",
+    "print(stdev)"
    ]
   },
   {
@@ -137,7 +191,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
