--- a/lyrics/lytics.ipynb
+++ b/lyrics/lytics.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,12 +104,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Baby shark, doo doo doo doo doo doo\n",
+      "Baby shark, doo doo doo doo doo doo\n",
+      "Baby shark, doo doo doo doo doo doo\n",
+      "Baby shark!\n"
+     ]
+    }
+   ],
    "source": [
     "# your code here\n",
-    "\n"
+    "\n",
+    "first_paragraph=\"\"\"Baby shark, doo doo doo doo doo doo\n",
+    "Baby shark, doo doo doo doo doo doo\n",
+    "Baby shark, doo doo doo doo doo doo\n",
+    "Baby shark!\"\"\"\n",
+    "\n",
+    "print(first_paragraph)"
    ]
   },
   {
@@ -138,12 +155,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Baby shark, doo doo doo doo doo doo\n",
+      "Baby shark, doo doo doo doo doo doo\n",
+      "Baby shark, doo doo doo doo doo doo\n",
+      "Baby shark!\n",
+      "Mommy shark, doo doo doo doo doo doo\n",
+      "Mommy shark, doo doo doo doo doo doo\n",
+      "Mommy shark, doo doo doo doo doo doo\n",
+      "Mommy shark!\n",
+      "Daddy shark, doo doo doo doo doo doo\n",
+      "Daddy shark, doo doo doo doo doo doo\n",
+      "Daddy shark, doo doo doo doo doo doo\n",
+      "Daddy shark!\n",
+      "Grandma shark, doo doo doo doo doo doo\n",
+      "Grandma shark, doo doo doo doo doo doo\n",
+      "Grandma shark, doo doo doo doo doo doo\n",
+      "Grandma shark!\n",
+      "Grandpa shark, doo doo doo doo doo doo\n",
+      "Grandpa shark, doo doo doo doo doo doo\n",
+      "Grandpa shark, doo doo doo doo doo doo\n",
+      "Grandpa shark!\n",
+      "Let's go hunt, doo doo doo doo doo doo\n",
+      "Let's go hunt, doo doo doo doo doo doo\n",
+      "Let's go hunt, doo doo doo doo doo doo\n",
+      "Let's go hunt!\n",
+      "Run away,…\n"
+     ]
+    }
+   ],
    "source": [
     "# your code here\n",
-    "\n"
+    "print(babyshark)\n"
    ]
   },
   {
@@ -186,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +535,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
