--- a/mission-impossible/mission-impossible.ipynb
+++ b/mission-impossible/mission-impossible.ipynb
@@ -38,11 +38,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[23, 20, 15, 40, 15]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Show volumes that exceed 10 dBs\n"
+    "# Show volumes that exceed 10 dBs\n",
+    "high_dbs=[e for e in dbs if e>10]\n",
+    "print(high_dbs)"
    ]
   },
   {
@@ -57,11 +67,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9, 20, 23, 28, 23]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Show the moments (indexs of the list) in which a volume exceeds 10 dBs\n"
+    "# Show the moments (indexs of the list) in which a volume exceeds 10 dBs\n",
+    "\n",
+    "index=[]\n",
+    "\n",
+    "for e in dbs:\n",
+    "    if e>10:  \n",
+    "        index.append(dbs.index(e))\n",
+    "print(index)   \n",
+    "\n"
    ]
   },
   {
@@ -76,12 +102,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(9, 23), (10, 20), (11, 15), (12, 40), (13, 15)]\n"
+     ]
+    }
+   ],
    "source": [
     "# Combine the last two exercises to show the moments when a \n",
-    "# volume exceeds 10 dBs. HINT: Use the enumerate function\n"
+    "# volume exceeds 10 dBs. HINT: Use the enumerate function\n",
+    "lst=list(enumerate(high_dbs,9))\n",
+    "print(lst)"
    ]
   },
   {
@@ -96,13 +132,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alarm!\n",
+      "Alarm!\n",
+      "Alarm!\n",
+      "Alarm!\n",
+      "Alarm!\n"
+     ]
+    }
+   ],
    "source": [
     "# Ethan is discovered if two consecutive volumes are greater than 10 dB. Is he safe? \n",
     "# HINT: Beware of the extremes, do not have an error of the type\n",
-    "# IndexError: list index out of range\n"
+    "# IndexError: list index out of range\n",
+    "for e in dbs:\n",
+    "    if e>10 and e+1>10:\n",
+    "        print(\"Alarm!\")"
    ]
   },
   {
@@ -140,12 +191,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -177,7 +226,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
