--- a/robin-hood/robin-hood.ipynb
+++ b/robin-hood/robin-hood.ipynb
@@ -58,11 +58,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# 1. Robin Hood is famous for hitting an arrow with another arrow. Did you get it?\n"
+    "# 1. Robin Hood is famous for hitting an arrow with another arrow. Did you get it?\n",
+    "\n",
+    "\n",
+    "print(points[i] in points)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -77,11 +92,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10, 6, 2, 2)\n"
+     ]
+    }
+   ],
    "source": [
-    "# 2. Calculate how many arrows have fallen in each quadrant.\n"
+    "# 2. Calculate how many arrows have fallen in each quadrant.\n",
+    "Q1=[]\n",
+    "Q2=[]\n",
+    "Q3=[]\n",
+    "Q4=[]\n",
+    "number=0\n",
+    "for i,e in points:\n",
+    "    if i>0 and e>0:\n",
+    "        number+=1\n",
+    "        Q1.append(number)\n",
+    "    elif i<0 and e>0:\n",
+    "        number+=1\n",
+    "        Q2.append(number)\n",
+    "    elif i<0 and e<0:\n",
+    "        number+=1\n",
+    "        Q3.append(number)\n",
+    "    elif i>0 and e<0:\n",
+    "        number+=1\n",
+    "        Q4.append(number)\n",
+    "\n",
+    "\n",
+    "tupla=(len(Q1),len(Q2),len(Q3),len(Q4))\n",
+    "print(tupla)"
    ]
   },
   {
@@ -101,7 +146,8 @@
    "outputs": [],
    "source": [
     "# 3. Find the point closest to the center. Calculate its distance to the center\n",
-    "# Defining a function that calculates the distance to the center can help.\n"
+    "# Defining a function that calculates the distance to the center can help.\n",
+    "\n"
    ]
   },
   {
@@ -160,7 +206,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
