--- a/snail-and-well/snail-and-well.ipynb
+++ b/snail-and-well/snail-and-well.ipynb
@@ -20,21 +20,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Days= 11\n"
+     ]
+    }
+   ],
    "source": [
     "# Assign problem data to variables with representative names\n",
     "# well height, daily advance, night retreat, accumulated distance\n",
-    "\n",
-    "\n",
+    "well_height=125\n",
+    "daily_advance=30\n",
+    "night_reteat=-20\n",
+    "accumulated_distance=10\n",
+    "snail_position=0\n",
     "# Assign 0 to the variable that represents the solution\n",
     "\n",
-    "\n",
+    "days=0\n",
     "# Write the code that solves the problem\n",
     "\n",
+    "while well_height > snail_position:\n",
+    "    snail_position = snail_position + daily_advance\n",
+    "    days += 1\n",
+    "    if well_height > snail_position:\n",
+    "        snail_position = snail_position + night_reteat\n",
     "\n",
-    "# Print the result with print('Days =', days)\n"
+    "# Print the result with print('Days =', days)\n",
+    "\n",
+    "print(\"Days=\",days)"
    ]
   },
   {
@@ -85,16 +103,16 @@
    "source": [
     "# Assign problem data to variables with representative names\n",
     "# well height, daily advance, night retreat, accumulated distance\n",
-    "\n",
+    "advance_cm = [30, 21, 33, 77, 44, 45, 23, 45, 12, 34, 55]\n",
     "\n",
     "# Assign 0 to the variable that represents the solution\n",
-    "\n",
     "\n",
     "# Write the code that solves the problem\n",
     "\n",
     "\n",
+    " \n",
     "\n",
-    "# Print the result with print('Days =', days)\n"
+    "# Print the result with print('Days =', days)"
    ]
   },
   {
@@ -111,9 +129,18 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "77 12\n"
+     ]
+    }
+   ],
    "source": [
-    "# What is its maximum displacement in a day? And its minimum?\n"
+    "# What is its maximum displacement in a day? And its minimum?\n",
+    "print(max(advance_cm),min(advance_cm))"
    ]
   },
   {
@@ -130,9 +157,19 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "38.09090909090909\n"
+     ]
+    }
+   ],
    "source": [
-    "# What is its average progress?\n"
+    "# What is its average progress?\n",
+    "average=sum(advance_cm)/len(advance_cm)\n",
+    "print(average)"
    ]
   },
   {
@@ -147,11 +184,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17.996969441850734\n"
+     ]
+    }
+   ],
    "source": [
-    "# What is the standard deviation of your displacement during the day?\n"
+    "# What is the standard deviation of your displacement during the day?\n",
+    "import statistics\n",
+    "\n",
+    "stdev=statistics.stdev(advance_cm)\n",
+    "print(stdev)\n",
+    "\n"
    ]
   },
   {
@@ -181,7 +231,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
