--- a/duel/duel.ipynb
+++ b/duel/duel.ipynb
@@ -37,31 +37,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Assign spell power lists to variables\n",
     "gandalf = [10, 11, 13, 30, 22, 11, 10, 33, 22, 22]\n",
-    "saruman = [23, 66, 12, 43, 12, 10, 44, 23, 12, 17]"
+    "saruman = [23, 66, 12, 43, 12, 10, 44, 23, 12, 17]\n",
+    "spells=len(gandalf)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Assign 0 to each variable that stores the victories\n"
+    "# Assign 0 to each variable that stores the victories\n",
+    "gandalf_wins=0\n",
+    "saruman_wins=0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "4\n"
+     ]
+    }
+   ],
    "source": [
-    "# Execution of spell clashes\n"
+    "# Execution of spell clashes\n",
+    "for i in range(spells):\n",
+    "    if gandalf[i] > saruman[i]:\n",
+    "        gandalf_wins += 1\n",
+    "    elif gandalf[i] < saruman[i]:\n",
+    "        saruman_wins += 1\n",
+    "        \n",
+    "print(gandalf_wins)\n",
+    "print(saruman_wins)"
    ]
   },
   {
@@ -77,12 +97,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gandalf wins\n"
+     ]
+    }
+   ],
    "source": [
     "# We check who has won, do not forget the possibility of a draw.\n",
-    "# Print the result based on the winner.\n"
+    "# Print the result based on the winner.\n",
+    "if gandalf_wins>saruman_wins:\n",
+    "    print(\"Gandalf wins\")\n",
+    "elif gandalf_wins<saruman_wins:\n",
+    "    print(\"Saruman wins\")\n",
+    "else:\n",
+    "    print(\"tie\")\n",
+    "    "
    ]
   },
   {
@@ -140,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,11 +198,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[50, 40, 40, 10, 50, 10, 40, 50, 10, 50]\n",
+      "[45, 45, 25, 50, 25, 40, 10, 45, 10, 10]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Assign spell power lists to variables\n"
+    "# Assign spell power lists to variables\n",
+    "gandalf_power = []\n",
+    "for i in gandalf:\n",
+    "    gandalf_power.append(POWER[i])\n",
+    "saruman_power = []\n",
+    "for i in saruman:\n",
+    "    saruman_power.append(POWER[i])\n",
+    "    \n",
+    "print(gandalf_power)\n",
+    "print(saruman_power)"
    ]
   },
   {
@@ -183,23 +236,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gandalf wins\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. A sorcerer wins if he succeeds in winning 3 spell clashes in a row.\n",
     "\n",
-    "\n",
+    "clashes_g=0\n",
+    "clashes_s=0\n",
     "\n",
     "# Execution of spell clashes\n",
     "\n",
+    "while clashes_g<3 or clashes_s<3:\n",
+    "    for i in range(spells):\n",
+    "        if gandalf_power[i] > saruman_power[i]:\n",
+    "            clashes_g+=1\n",
+    "        elif gandalf_power[i] < saruman_power[i]:\n",
+    "            clashes_s+=1\n",
+    "\n",
     "# check clashes\n",
+    "\n",
     "\n",
     "# check for 3 wins in a row\n",
     "\n",
+    "    \n",
     "# check the winner\n",
     "\n",
-    "# count sum of clashes\n"
+    "if clashes_g>clashes_s:\n",
+    "    print(\"Gandalf wins\")\n",
+    "elif clashes_g<clashes_s:\n",
+    "    print(\"Saruman wins\")\n",
+    "else:\n",
+    "    print(\"tie\")\n",
+    "\n",
+    "# count sum of clashes\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -214,11 +294,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "35.0\n",
+      "30.5\n"
+     ]
+    }
+   ],
    "source": [
-    "# 3. Average of each of the spell lists.\n"
+    "# 3. Average of each of the spell lists.\n",
+    "\n",
+    "gandalf_power_average=sum(gandalf_power)/len(gandalf_power)\n",
+    "saruman_power_average=sum(saruman_power)/len(saruman_power)\n",
+    "\n",
+    "print(gandalf_power_average)\n",
+    "print(saruman_power_average)"
    ]
   },
   {
@@ -234,11 +329,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17.795130420052185\n",
+      "16.40629960309962\n"
+     ]
+    }
+   ],
    "source": [
-    "# 4. Standard deviation of each of the spell lists.\n"
+    "# 4. Standard deviation of each of the spell lists.\n",
+    "\n",
+    "import statistics\n",
+    "\n",
+    "gandalf_power_stdev=statistics.stdev(gandalf_power)\n",
+    "saruman_power_stdev=statistics.stdev(saruman_power)\n",
+    "\n",
+    "print(gandalf_power_stdev)\n",
+    "print(saruman_power_stdev)"
    ]
   },
   {
@@ -251,13 +363,6 @@
     "15.56438241627338\n",
     "```"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -276,7 +381,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
