--- a/rock-paper-scissors/rock-paper-scissors.ipynb
+++ b/rock-paper-scissors/rock-paper-scissors.ipynb
@@ -25,23 +25,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import the choice function of the random module\n",
     "# https://stackoverflow.com/questions/306400/how-to-randomly-select-an-item-from-a-list\n",
     "\n",
-    "\n",
+    "from random import choice\n",
     "# Assign to a list the 3 possible options: 'stone', 'paper' or 'scissors'.\n",
-    "\n",
+    "options=[\"stone\",\"paper\",\"scissors\"]\n",
     "\n",
     "# Assign a variable to the maximum number of games: 1, 3, 5, etc ...\n",
-    "\n",
+    "n_games=3\n",
     "\n",
     "# Assign a variable to the number of games a player must win to win.\n",
     "# Preferably the value will be based on the number of maximum games\n",
-    "\n",
+    "games_to_win=3\n",
     "\n",
     "# Define a function that randomly returns one of the 3 options.\n",
     "# This will correspond to the play of the machine. Totally random.\n",
@@ -50,7 +50,7 @@
     "# Define a function that asks your choice: 'stone', 'paper' or 'scissors'\n",
     "# you should only allow one of the 3 options. This is defensive programming.\n",
     "# If it is not stone, paper or scissors keep asking until it is.\n",
-    "\n",
+    "choice=input(\"choose an option:\")\n",
     "\n",
     "# Define a function that resolves a combat.\n",
     "# Returns 0 if there is a tie, 1 if the machine wins, 2 if the human player wins\n",
@@ -188,7 +188,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
